# ai-dungeon-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/ai_dungeon/: config.py  main.py
src/ai_dungeon/ai_dungeon_api/: main.py
src/ai_dungeon/plugins/: action.py  helpers.py  initdb.py  language.py  prompts.py  start.py
src/ai_dungeon/storage/: redis.py  user_info.py
src/ai_dungeon/translations/: yandex.py
